# elevator_rs

./: .gitignore  Cargo.toml  README.md  todo.md
assets/prefabs/: bullet.ron  bullet_impact.ron  doors.ron  elevator.ron  enemy.ron  guns.ron  player.ron
assets/texture/: building.ron  doors.ron  game_spritesheet.ron  player.ron
assets/tilesets/: elevator.json  elevator.tmx  elevator.tsx  elevator2.json  floors.json  floors.tsx  floors_1.json  floors_1.tmx  level_1.json  level_1.tmx  tileset.json
assets/ui/: fps.ron
config/: bindings.ron  display.ron
elevator/: Cargo.toml
elevator/src/: main.rs
elevator/src/states/: game.rs  mod.rs
lib/components/: Cargo.toml
lib/components/src/: child.rs  direction.rs  elevator.rs  motion.rs
lib/core/animation/: Cargo.toml
lib/core/animation/src/: components.rs  systems.rs
lib/core/asset/: Cargo.toml
lib/core/asset/src/: lib.rs
lib/core/camera/: Cargo.toml
lib/core/camera/src/: lib.rs
lib/core/floors/: Cargo.toml
lib/core/floors/src/: floors.rs  lib.rs
lib/core/fps/: Cargo.toml
lib/core/hierarchy/: Cargo.toml
lib/core/person/: Cargo.toml
lib/core/person/src/: bullet.rs  lib.rs
lib/core/person/src/components/: mod.rs  person.rs
lib/core/person/src/systems/: animation.rs  bullet_collision.rs  floor.rs  kinematics.rs  mod.rs  shoot.rs  transformation.rs
lib/core/physics/: Cargo.toml
lib/core/physics/src/components/: collision.rs  mod.rs  motion.rs
lib/core/physics/src/systems/: collision.rs  kinematics.rs  mod.rs  transformations.rs
lib/entities/: Cargo.toml
lib/entities/src/: bullet.rs  door.rs  elevator.rs  lib.rs  player.rs
lib/game/door/: Cargo.toml
lib/game/door/src/: components.rs  entity.rs  lib.rs
lib/game/door/src/systems/: animation.rs  collision.rs  mod.rs  spawn.rs  transformation.rs
lib/game/elevator/: Cargo.toml
lib/game/elevator/src/: components.rs  entity.rs  lib.rs
lib/game/elevator/src/systems/: elevator.rs  mod.rs  transformation.rs
lib/game/enemy/: Cargo.toml
lib/game/enemy/src/: entity.rs  lib.rs
lib/game/enemy/src/components/: enemy.rs  mod.rs
lib/game/enemy/src/systems/: ai.rs  mod.rs
lib/game/map/: Cargo.toml
lib/game/map/src/: lib.rs  map.rs  tileset.rs
lib/game/map/src/systems/: mod.rs  render.rs
lib/game/player/: Cargo.toml
lib/game/player/src/: bullet.rs  lib.rs  player.rs
lib/game/player/src/components/: gun.rs  mod.rs  player.rs
lib/game/player/src/systems/: animation.rs  bullet_collision.rs  controls.rs  kinematics.rs  mod.rs  shoot.rs  transformation.rs
lib/resources/: Cargo.toml
lib/resources/src/: asset.rs  context.rs  map.rs
lib/states/: Cargo.toml
lib/states/src/: game.rs
lib/systems/: Cargo.toml
lib/systems/src/: animation.rs  collision.rs  controls.rs  direction.rs  elevator.rs  kinematics.rs  lib.rs  shoot.rs  transformations.rs
src/: main.rs
src/components/: animation.rs  bullet.rs  collision.rs  door.rs  elevator.rs  gun.rs  mod.rs  motion.rs  player.rs  transformation.rs
src/entities/: bullet.rs  camera.rs  door.rs  elevator.rs  mod.rs  player.rs
src/resources/: asset.rs  context.rs  map.rs  mod.rs  tileset.rs
src/states/: game.rs  mod.rs
src/systems/: animation.rs  collision.rs  controls.rs  direction.rs  elevator.rs  kinematics.rs  mod.rs  move_person.rs  shoot.rs  transformations.rs
