[package]
name = "elevator"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.13.2", features = ["metal", "nightly", "json"] }
objc = "=0.2.6"
serde = "1.0.102"
components = { path = "../lib/components" }
resources = { path = "../lib/resources" }
states = { path = "../lib/states" }
systems = { path = "../lib/systems" }