[package]
name = "elevator_main"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
amethyst = { version = "0.13.2", features = ["metal", "nightly", "json"] }
objc = "=0.2.6"
serde = "1.0.102"
animation = { path = "../lib/core/animation" }
asset = { path = "../lib/core/asset" }
camera = { path = "../lib/core/camera" }
door = { path = "../lib/game/door" }
elevator = { path = "../lib/game/elevator" }
enemy = { path = "../lib/game/enemy" }
fps = { path = "../lib/core/fps" }
map = { path = "../lib/game/map" }
person = { path = "../lib/core/person" }
physics = { path = "../lib/core/physics" }
player = { path = "../lib/game/player" }