[package]
name = "door"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.13.2", features = ["metal", "nightly", "json"] }
objc = "=0.2.6"
serde = "1.0.102"

animation = { path = "../../core/animation" }
hierarchy = { path = "../../core/hierarchy" }
physics = { path = "../../core/physics" }
player = { path = "../player" }
