[package]
name = "door"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.13.2", features = ["metal", "nightly", "json"] }
objc = "=0.2.6"
rand = "0.7.2"
serde = "1.0.102"

animation = { path = "../../core/animation" }
asset = { path = "../../core/asset" }
enemy = { path = "../enemy" }
floors = { path = "../../core/floors" }
hierarchy = { path = "../../core/hierarchy" }
person = { path = "../../core/person" }
physics = { path = "../../core/physics" }
player = { path = "../player" }
