[package]
name = "map"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.13.2", features = ["metal", "nightly", "json"] }
objc = "=0.2.6"
serde = "1.0.102"
array_tool = "1.0.3"

animation = { path = "../../core/animation" }
asset = { path = "../../core/asset" }
door = { path = "../door" }
elevator = { path = "../elevator" }
floors = { path = "../../core/floors" }
physics = { path = "../../core/physics" }
player = { path = "../player" }
